da: size by tier by species==cat

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        " ('성별', '취미')]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "4        [심플]  [빨강색, 파랑색]  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1506,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,137 +1656,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "species  tier\n",
-      "개        2.0      2\n",
-      "         3.0      3\n",
-      "         4.0      4\n",
-      "         5.0      4\n",
-      "         6.0      3\n",
-      "개구리      2.0      1\n",
-      "         3.0      1\n",
-      "         4.0      1\n",
-      "         5.0      8\n",
-      "         6.0      7\n",
-      "개미핥기     5.0      3\n",
-      "         6.0      4\n",
-      "고릴라      5.0      1\n",
-      "         6.0      8\n",
-      "고양이      1.0      2\n",
-      "         2.0      6\n",
-      "         3.0      4\n",
-      "         4.0      4\n",
-      "         5.0      5\n",
-      "         6.0      2\n",
-      "곰        4.0      3\n",
-      "         5.0      3\n",
-      "         6.0      9\n",
-      "꼬마곰      1.0      3\n",
-      "         2.0      1\n",
-      "         3.0      1\n",
-      "         4.0      2\n",
-      "         5.0      5\n",
-      "         6.0      4\n",
-      "늑대       2.0      2\n",
-      "         3.0      4\n",
-      "         4.0      3\n",
-      "         5.0      2\n",
-      "다람쥐      1.0      1\n",
-      "         2.0      1\n",
-      "         3.0      2\n",
-      "         4.0      4\n",
-      "         5.0      6\n",
-      "         6.0      4\n",
-      "닭        5.0      4\n",
-      "         6.0      5\n",
-      "독수리      2.0      1\n",
-      "         5.0      3\n",
-      "         6.0      5\n",
-      "돼지       4.0      1\n",
-      "         5.0      1\n",
-      "         6.0     12\n",
-      "말        2.0      1\n",
-      "         3.0      1\n",
-      "         4.0      1\n",
-      "         5.0      4\n",
-      "         6.0      8\n",
-      "문어       1.0      2\n",
-      "         3.0      1\n",
-      "사슴       1.0      1\n",
-      "         2.0      3\n",
-      "         3.0      3\n",
-      "         4.0      3\n",
-      "사자       4.0      1\n",
-      "         5.0      1\n",
-      "         6.0      5\n",
-      "새        5.0      3\n",
-      "         6.0     10\n",
-      "수소       5.0      2\n",
-      "         6.0      4\n",
-      "악어       4.0      2\n",
-      "         5.0      1\n",
-      "         6.0      4\n",
-      "암소       5.0      3\n",
-      "         6.0      1\n",
-      "양        2.0      2\n",
-      "         4.0      1\n",
-      "         5.0      5\n",
-      "         6.0      5\n",
-      "염소       1.0      1\n",
-      "         3.0      2\n",
-      "         4.0      2\n",
-      "         6.0      3\n",
-      "오리       2.0      2\n",
-      "         4.0      3\n",
-      "         5.0      3\n",
-      "         6.0      9\n",
-      "원숭이      4.0      1\n",
-      "         5.0      4\n",
-      "         6.0      3\n",
-      "쥐        4.0      1\n",
-      "         5.0      4\n",
-      "         6.0     10\n",
-      "캥거루      5.0      3\n",
-      "         6.0      5\n",
-      "코끼리      3.0      1\n",
-      "         4.0      2\n",
-      "         5.0      3\n",
-      "         6.0      5\n",
-      "코뿔소      1.0      1\n",
-      "         4.0      1\n",
-      "         5.0      3\n",
-      "         6.0      1\n",
-      "코알라      3.0      1\n",
-      "         4.0      3\n",
-      "         5.0      5\n",
-      "타조       2.0      1\n",
-      "         4.0      2\n",
-      "         5.0      4\n",
-      "         6.0      3\n",
-      "토끼       1.0      1\n",
-      "         3.0      2\n",
-      "         4.0      3\n",
-      "         5.0     10\n",
-      "         6.0      4\n",
-      "펭귄       2.0      1\n",
-      "         4.0      4\n",
-      "         5.0      4\n",
-      "         6.0      4\n",
-      "하마       5.0      2\n",
-      "         6.0      5\n",
-      "햄스터      3.0      3\n",
-      "         4.0      1\n",
-      "         5.0      2\n",
-      "         6.0      2\n",
-      "호랑이      4.0      2\n",
-      "         5.0      2\n",
-      "         6.0      3\n"
+      "Series([], )\n"
      ]
     }
    ],
@@ -1797,137 +1674,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tier  species\n",
-      "1.0   고양이         2\n",
-      "      꼬마곰         3\n",
-      "      다람쥐         1\n",
-      "      문어          2\n",
-      "      사슴          1\n",
-      "      염소          1\n",
-      "      코뿔소         1\n",
-      "      토끼          1\n",
-      "2.0   개           2\n",
-      "      개구리         1\n",
-      "      고양이         6\n",
-      "      꼬마곰         1\n",
-      "      늑대          2\n",
-      "      다람쥐         1\n",
-      "      독수리         1\n",
-      "      말           1\n",
-      "      사슴          3\n",
-      "      양           2\n",
-      "      오리          2\n",
-      "      타조          1\n",
-      "      펭귄          1\n",
-      "3.0   개           3\n",
-      "      개구리         1\n",
-      "      고양이         4\n",
-      "      꼬마곰         1\n",
-      "      늑대          4\n",
-      "      다람쥐         2\n",
-      "      말           1\n",
-      "      문어          1\n",
-      "      사슴          3\n",
-      "      염소          2\n",
-      "      코끼리         1\n",
-      "      코알라         1\n",
-      "      토끼          2\n",
-      "      햄스터         3\n",
-      "4.0   개           4\n",
-      "      개구리         1\n",
-      "      고양이         4\n",
-      "      곰           3\n",
-      "      꼬마곰         2\n",
-      "      늑대          3\n",
-      "      다람쥐         4\n",
-      "      돼지          1\n",
-      "      말           1\n",
-      "      사슴          3\n",
-      "      사자          1\n",
-      "      악어          2\n",
-      "      양           1\n",
-      "      염소          2\n",
-      "      오리          3\n",
-      "      원숭이         1\n",
-      "      쥐           1\n",
-      "      코끼리         2\n",
-      "      코뿔소         1\n",
-      "      코알라         3\n",
-      "      타조          2\n",
-      "      토끼          3\n",
-      "      펭귄          4\n",
-      "      햄스터         1\n",
-      "      호랑이         2\n",
-      "5.0   개           4\n",
-      "      개구리         8\n",
-      "      개미핥기        3\n",
-      "      고릴라         1\n",
-      "      고양이         5\n",
-      "      곰           3\n",
-      "      꼬마곰         5\n",
-      "      늑대          2\n",
-      "      다람쥐         6\n",
-      "      닭           4\n",
-      "      독수리         3\n",
-      "      돼지          1\n",
-      "      말           4\n",
-      "      사자          1\n",
-      "      새           3\n",
-      "      수소          2\n",
-      "      악어          1\n",
-      "      암소          3\n",
-      "      양           5\n",
-      "      오리          3\n",
-      "      원숭이         4\n",
-      "      쥐           4\n",
-      "      캥거루         3\n",
-      "      코끼리         3\n",
-      "      코뿔소         3\n",
-      "      코알라         5\n",
-      "      타조          4\n",
-      "      토끼         10\n",
-      "      펭귄          4\n",
-      "      하마          2\n",
-      "      햄스터         2\n",
-      "      호랑이         2\n",
-      "6.0   개           3\n",
-      "      개구리         7\n",
-      "      개미핥기        4\n",
-      "      고릴라         8\n",
-      "      고양이         2\n",
-      "      곰           9\n",
-      "      꼬마곰         4\n",
-      "      다람쥐         4\n",
-      "      닭           5\n",
-      "      독수리         5\n",
-      "      돼지         12\n",
-      "      말           8\n",
-      "      사자          5\n",
-      "      새          10\n",
-      "      수소          4\n",
-      "      악어          4\n",
-      "      암소          1\n",
-      "      양           5\n",
-      "      염소          3\n",
-      "      오리          9\n",
-      "      원숭이         3\n",
-      "      쥐          10\n",
-      "      캥거루         5\n",
-      "      코끼리         5\n",
-      "      코뿔소         1\n",
-      "      타조          3\n",
-      "      토끼          4\n",
-      "      펭귄          4\n",
-      "      하마          5\n",
-      "      햄스터         2\n",
-      "      호랑이         3\n"
+      "Series([], )\n"
      ]
     }
    ],
@@ -1935,11 +1689,46 @@
     "chars_v.groupby(['tier', 'species']).size()\n",
     "print(_.to_string())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "종별로 세보는 게 답인 것 같습니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tier\n",
+       "1.0     8.695652\n",
+       "2.0    26.086957\n",
+       "3.0    17.391304\n",
+       "4.0    17.391304\n",
+       "5.0    21.739130\n",
+       "6.0     8.695652\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_cats = len(chars_v[chars_v['species'] == '고양이'])\n",
+    "chars_v[chars_v['species'] == '고양이'].groupby('tier').size() * 100 / num_cats"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "6a28367f67cdc883bf0651ab926a45cdaf5821f65ab5104ac3f819fe9582a76b"
+   "hash": "74f8d10e2c676cf578db085a3577a8faabcdf0b84973f72d29ebae30926a0b41"
   },
   "kernelspec": {
    "display_name": "Python 3.10.2 ('.venv': venv)",
