da: sort by tier percentage

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -2770,6 +2770,444 @@
    "source": [
     "df_pct"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>문어</th>\n",
+       "      <td>66.666667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>꼬마곰</th>\n",
+       "      <td>18.750000</td>\n",
+       "      <td>6.250000</td>\n",
+       "      <td>6.250000</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>31.250000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>코뿔소</th>\n",
+       "      <td>16.666667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>16.666667</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>16.666667</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>염소</th>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>37.500000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>사슴</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>고양이</th>\n",
+       "      <td>8.695652</td>\n",
+       "      <td>26.086957</td>\n",
+       "      <td>17.391304</td>\n",
+       "      <td>17.391304</td>\n",
+       "      <td>21.739130</td>\n",
+       "      <td>8.695652</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>다람쥐</th>\n",
+       "      <td>5.555556</td>\n",
+       "      <td>5.555556</td>\n",
+       "      <td>11.111111</td>\n",
+       "      <td>22.222222</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>22.222222</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>토끼</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>늑대</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.181818</td>\n",
+       "      <td>36.363636</td>\n",
+       "      <td>27.272727</td>\n",
+       "      <td>18.181818</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>양</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.384615</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.692308</td>\n",
+       "      <td>38.461538</td>\n",
+       "      <td>38.461538</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>개</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>18.750000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>18.750000</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>오리</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.764706</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>17.647059</td>\n",
+       "      <td>17.647059</td>\n",
+       "      <td>52.941176</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>독수리</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.111111</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>55.555556</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>타조</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>펭귄</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.692308</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>30.769231</td>\n",
+       "      <td>30.769231</td>\n",
+       "      <td>30.769231</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>말</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>26.666667</td>\n",
+       "      <td>53.333333</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>개구리</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.555556</td>\n",
+       "      <td>5.555556</td>\n",
+       "      <td>5.555556</td>\n",
+       "      <td>44.444444</td>\n",
+       "      <td>38.888889</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>햄스터</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>37.500000</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>코알라</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.111111</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>55.555556</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>코끼리</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.090909</td>\n",
+       "      <td>18.181818</td>\n",
+       "      <td>27.272727</td>\n",
+       "      <td>45.454545</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>호랑이</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28.571429</td>\n",
+       "      <td>28.571429</td>\n",
+       "      <td>42.857143</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>악어</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28.571429</td>\n",
+       "      <td>14.285714</td>\n",
+       "      <td>57.142857</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>곰</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>사자</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>14.285714</td>\n",
+       "      <td>14.285714</td>\n",
+       "      <td>71.428571</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>원숭이</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>37.500000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>돼지</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.142857</td>\n",
+       "      <td>7.142857</td>\n",
+       "      <td>85.714286</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>쥐</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>26.666667</td>\n",
+       "      <td>66.666667</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>암소</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>닭</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>44.444444</td>\n",
+       "      <td>55.555556</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>개미핥기</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>42.857143</td>\n",
+       "      <td>57.142857</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>캥거루</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>37.500000</td>\n",
+       "      <td>62.500000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>수소</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>66.666667</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>하마</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28.571429</td>\n",
+       "      <td>71.428571</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>새</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>23.076923</td>\n",
+       "      <td>76.923077</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>고릴라</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.111111</td>\n",
+       "      <td>88.888889</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              1          2          3          4          5          6  count\n",
+       "문어    66.666667   0.000000  33.333333   0.000000   0.000000   0.000000      3\n",
+       "꼬마곰   18.750000   6.250000   6.250000  12.500000  31.250000  25.000000     16\n",
+       "코뿔소   16.666667   0.000000   0.000000  16.666667  50.000000  16.666667      6\n",
+       "염소    12.500000   0.000000  25.000000  25.000000   0.000000  37.500000      8\n",
+       "사슴    10.000000  30.000000  30.000000  30.000000   0.000000   0.000000     10\n",
+       "고양이    8.695652  26.086957  17.391304  17.391304  21.739130   8.695652     23\n",
+       "다람쥐    5.555556   5.555556  11.111111  22.222222  33.333333  22.222222     18\n",
+       "토끼     5.000000   0.000000  10.000000  15.000000  50.000000  20.000000     20\n",
+       "늑대     0.000000  18.181818  36.363636  27.272727  18.181818   0.000000     11\n",
+       "양      0.000000  15.384615   0.000000   7.692308  38.461538  38.461538     13\n",
+       "개      0.000000  12.500000  18.750000  25.000000  25.000000  18.750000     16\n",
+       "오리     0.000000  11.764706   0.000000  17.647059  17.647059  52.941176     17\n",
+       "독수리    0.000000  11.111111   0.000000   0.000000  33.333333  55.555556      9\n",
+       "타조     0.000000  10.000000   0.000000  20.000000  40.000000  30.000000     10\n",
+       "펭귄     0.000000   7.692308   0.000000  30.769231  30.769231  30.769231     13\n",
+       "말      0.000000   6.666667   6.666667   6.666667  26.666667  53.333333     15\n",
+       "개구리    0.000000   5.555556   5.555556   5.555556  44.444444  38.888889     18\n",
+       "햄스터    0.000000   0.000000  37.500000  12.500000  25.000000  25.000000      8\n",
+       "코알라    0.000000   0.000000  11.111111  33.333333  55.555556   0.000000      9\n",
+       "코끼리    0.000000   0.000000   9.090909  18.181818  27.272727  45.454545     11\n",
+       "호랑이    0.000000   0.000000   0.000000  28.571429  28.571429  42.857143      7\n",
+       "악어     0.000000   0.000000   0.000000  28.571429  14.285714  57.142857      7\n",
+       "곰      0.000000   0.000000   0.000000  20.000000  20.000000  60.000000     15\n",
+       "사자     0.000000   0.000000   0.000000  14.285714  14.285714  71.428571      7\n",
+       "원숭이    0.000000   0.000000   0.000000  12.500000  50.000000  37.500000      8\n",
+       "돼지     0.000000   0.000000   0.000000   7.142857   7.142857  85.714286     14\n",
+       "쥐      0.000000   0.000000   0.000000   6.666667  26.666667  66.666667     15\n",
+       "암소     0.000000   0.000000   0.000000   0.000000  75.000000  25.000000      4\n",
+       "닭      0.000000   0.000000   0.000000   0.000000  44.444444  55.555556      9\n",
+       "개미핥기   0.000000   0.000000   0.000000   0.000000  42.857143  57.142857      7\n",
+       "캥거루    0.000000   0.000000   0.000000   0.000000  37.500000  62.500000      8\n",
+       "수소     0.000000   0.000000   0.000000   0.000000  33.333333  66.666667      6\n",
+       "하마     0.000000   0.000000   0.000000   0.000000  28.571429  71.428571      7\n",
+       "새      0.000000   0.000000   0.000000   0.000000  23.076923  76.923077     13\n",
+       "고릴라    0.000000   0.000000   0.000000   0.000000  11.111111  88.888889      9"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pct.sort_values(by=[1, 2, 3, 4, 5], ascending=False)"
+   ]
   }
  ],
  "metadata": {
