da: export tiers(ylabel)

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -3725,6 +3725,34 @@
     "  columns=['sort1', 'sort2', 'sort3', 'sort4', 'sort5']\n",
     ").to_dict(orient='records')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tiers = sorted(list(chars_t['tier'].unique()))\n",
+    "tiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
