da: export species

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -3749,10 +3749,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['문어', '사슴', '고양이', '꼬마곰', '늑대', '코뿔소', '양', '개', '염소', '오리', '다람쥐', '독수리', '타조', '펭귄', '말', '개구리', '토끼', '햄스터', '코알라', '코끼리', '호랑이', '악어', '곰', '사자', '원숭이', '돼지', '쥐', '암소', '닭', '개미핥기', '캥거루', '수소', '하마', '새', '고릴라']\n"
+     ]
+    }
+   ],
+   "source": [
+    "species = list(df_pct.sort_values(\n",
+    "  ['sort1', 'sort2', 'sort3', 'sort4', 'sort5'], ascending=False\n",
+    ").index)\n",
+    "print(species)"
+   ]
   }
  ],
  "metadata": {
